--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <meta property="og:type" content="website">
 </head>
 <div class="preloader">
-  <img class="preloader-image" src="./images/logo.png"  alt="">
+  <img class="preloader-image" src="./images/preloader.gif"  alt="">
 </div>
   <div class="preloaderlayer"></div>
 
@@ -156,7 +156,7 @@
         </div>
         <div class="u-custom-menu u-nav-container-collapse">
           <div
-            class="u-align-center u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
+            class="u-align-center u-white u-container-style u-inner-container-layout u-opacity u-opacity-75 u-sidenav">
             <div class="u-inner-container-layout u-sidenav-overflow">
               <div class="u-menu-close"></div>
               <ul class="u-align-center text-left-mobileview u-nav u-popupmenu-items u-unstyled u-nav-6">
@@ -232,7 +232,7 @@
               </ul>
             </div>
           </div>
-          <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
+          <div class="u-blue u-menu-overlay u-opacity u-opacity-70"></div>
         </div>
       </nav>
       <a href="index.html" class="u-image u-logo u-image-1" data-image-width="80" data-image-height="40">
@@ -264,7 +264,7 @@
                 <div class="u-align-left u-container-style u-layout-cell u-right-cell u-size-60 u-layout-cell-3">
                   <div class="u-container-layout u-container-layout-3">
                     <p class="u-text u-text-palette-5-light-3 u-text-3">Organizations run on backlashes of uncertainty. Right collection of a data set and making sense out of it can reduce this horror. We believe taking a scientific approach, interpreting the right hows and whys and a concrete analysis is the root system of running a successful organization. We provide that centralized space which you can reach out to for all your business problems.
-                      <br><br><b>We combine local knowledge with global expertise, strategy with design, empathy with creativity, meaning with magic. Reach out to discuss how we might help you accelerate change.</b>
+                      <!-- <br><br><b>We combine local knowledge with global expertise, strategy with design, empathy with creativity, meaning with magic. Reach out to discuss how we might help you accelerate change.</b> -->
                     </p>
                     <a href="index.html#carousel_64ac" data-page-id="2206810918"
                       class="u-border-none u-btn u-btn-round u-button-style u-color-scheme-summer-time u-color-style-multicolor-1 u-palette-1-base u-radius-50 u-btn-1">Learn
@@ -306,36 +306,36 @@
           <div class="carousel-item active">
             <a href="/Services.html#data_science">
               <img src="./images/dataScience_homepage_1.jpg" class="d-block w-100" alt="...">
-              <div class="carousel-caption d-none d-md-block">
+              <div class="carousel-caption ">
                 <h5>Data Science</h5>
-                <p>Gain quick access to ML tools, forecasts for your business, and the ability to do your own what-if research.</p>
+                <p class="d-none d-md-block">Gain quick access to ML tools, forecasts for your business, and the ability to do your own what-if research.</p>
               </div>
             </a>
           </div>
           <div class="carousel-item">
             <a href="/Services.html#data_analysis">
               <img src="./images/random_bg_3.jpg" class="d-block w-100" alt="...">
-              <div class="carousel-caption d-none d-md-block">
+              <div class="carousel-caption">
                 <h5>Data Analysis</h5>
-                <p>With our corporate data analytics, you can unleash the potential of your data, develop breakthrough insights, streamline operations, and increase your return of investment.</p>
+                <p class="d-none d-md-block">With our corporate data analytics, you can unleash the potential of your data, develop breakthrough insights, streamline operations, and increase your return of investment.</p>
               </div>
             </a>
           </div>
           <div class="carousel-item">
             <a href="/Services.html#data_engineering">
               <img src="./images/random_bg_2.jpg" class="d-block w-100" alt="...">
-              <div class="carousel-caption d-none d-md-block">
+              <div class="carousel-caption">
                 <h5>Data Engineering</h5>
-                <p>Integrate your data warehouse systems seamlessly. Automate the transformation of data stored in data banks and push it to your data warehouse platform.</p>
+                <p class="d-none d-md-block">Integrate your data warehouse systems seamlessly. Automate the transformation of data stored in data banks and push it to your data warehouse platform.</p>
               </div>
             </a>
           </div>
           <div class="carousel-item">
             <a href="/Services.html#business_intelligence">
               <img src="./images/businessintelligence_homepage_1.png" class="d-block w-100" alt="...">
-              <div class="carousel-caption d-none d-md-block">
+              <div class="carousel-caption">
                 <h5>Business Intelligence</h5>
-                <p>We will help you find the best proven strategies for your firm.To better understand your company needs, our specialists will work togather information, thus providing you with insights.</p>
+                <p class="d-none d-md-block">We will help you find the best proven strategies for your firm.To better understand your company needs, our specialists will work togather information, thus providing you with insights.</p>
               </div>
             </a>
         </div>
@@ -666,14 +666,14 @@
               </g>
             </svg><img></span>&nbsp;+91 9314355550
           </span>
-        <a href="mailto:kadambintillegence@gmail.com"
+        <a href="mailto:contact@kadambintelligence.com"
           class="u-active-none u-btn u-button-style u-hover-none u-none u-text-hover-palette-2-base u-btn-2"><span
             class="u-icon u-text-palette-2-base"><svg class="u-svg-content" viewBox="0 0 479.058 479.058"
               style="width: 1em; height: 1em;">
               <path
                 d="m434.146 59.882h-389.234c-24.766 0-44.912 20.146-44.912 44.912v269.47c0 24.766 20.146 44.912 44.912 44.912h389.234c24.766 0 44.912-20.146 44.912-44.912v-269.47c0-24.766-20.146-44.912-44.912-44.912zm0 29.941c2.034 0 3.969.422 5.738 1.159l-200.355 173.649-200.356-173.649c1.769-.736 3.704-1.159 5.738-1.159zm0 299.411h-389.234c-8.26 0-14.971-6.71-14.971-14.971v-251.648l199.778 173.141c2.822 2.441 6.316 3.655 9.81 3.655s6.988-1.213 9.81-3.655l199.778-173.141v251.649c-.001 8.26-6.711 14.97-14.971 14.97z">
               </path>
-            </svg><img></span>&nbsp;kadambintillegence@gmail.com
+            </svg><img></span>&nbsp;contact@kadambintelligence.com
         </a>
         <p class="u-text u-text-2"><span class="u-icon u-text-palette-2-base"><svg class="u-svg-content"
               viewBox="0 0 512 512" x="0px" y="0px" style="width: 1em; height: 1em;">
@@ -896,7 +896,7 @@
               <p><i class="fa fa-phone pe-2"></i>+91 9314355550</p>
             </li>
             <li>
-              <p><i class="fa fa-envelope pe-2 mb-0"></i>kadambintillegence@gmail.com</p>
+              <p><i class="fa fa-envelope pe-2 mb-0"></i>contact@kadambintelligence.com</p>
             </li>
           </ul>
         </div>
