--- a/About.html
+++ b/About.html
@@ -34,7 +34,7 @@
 </head>
 
 <div class="preloader">
-  <img class="preloader-image" src="./images/logo.png"  alt="">
+  <img class="preloader-image" src="./images/preloader.gif"  alt="">
 </div>
   <div class="preloaderlayer"></div>
 
@@ -151,7 +151,7 @@
         </div>
         <div class="u-custom-menu u-nav-container-collapse">
           <div
-            class="u-align-center u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
+            class="u-align-center u-white u-container-style u-inner-container-layout u-opacity u-opacity-75 u-sidenav">
             <div class="u-inner-container-layout u-sidenav-overflow">
               <div class="u-menu-close"></div>
               <ul class="u-align-center text-left-mobileview u-nav u-popupmenu-items u-unstyled u-nav-6">
@@ -227,7 +227,7 @@
               </ul>
             </div>
           </div>
-          <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
+          <div class="u-blue u-menu-overlay u-opacity u-opacity-70"></div>
         </div>
       </nav>
       <a href="index.html" class="u-image u-logo u-image-1" data-image-width="80" data-image-height="40">
@@ -432,7 +432,7 @@
               <p><i class="fa fa-phone pe-2"></i>+91 9314355550</p>
             </li>
             <li>
-              <p><i class="fa fa-envelope pe-2 mb-0"></i>kadambintillegence@gmail.com</p>
+              <p><i class="fa fa-envelope pe-2 mb-0"></i>contact@kadambintelligence.com</p>
             </li>
           </ul>
         </div>
