--- a/Industries.html
+++ b/Industries.html
@@ -226,7 +226,7 @@
             aria-labelledby="link-retail">
             <div class="u-container-layout u-container-layout-1">
               <img class="industries_images" src="./images/retail_industries-2.jpg" alt="">
-              <h4 class="u-text u-text-default u-text-1">Description</h4>
+              <h4 class="u-text u-text-default u-text-1">Retail</h4>
               <div class="u-align-left u-border-3 u-border-grey-dark-1 u-line u-line-horizontal u-line-1"></div>
               <p class="u-text u-text-default u-text-2">With sophisticated analytics, you can increase shop profitability and consumer engagement by analysing sales, managing inventory, and identifying customer and industry trends, thus maximising personnel effectiveness by knowing the customer per sales associate ratio. By understanding local consumer trends, sales statistics, and more to make data-driven decisions.</p>
               <!-- <h4 class="u-text u-text-default u-text-3">information</h4>
@@ -239,7 +239,7 @@
           <div class="u-container-style u-tab-pane" id="healthcare" role="tabpanel" aria-labelledby="link-healthcare">
             <div class="u-container-layout u-container-layout-2">
               <img class="industries_images" src="./images/healthcare_industries_2.png" alt="">
-              <h4 class="u-text u-text-default u-text-5">The Basics of Healthcare</h4>
+              <h4 class="u-text u-text-default u-text-5">Healthcare</h4>
               <p class="u-text u-text-default u-text-6">We analyze policy and claim data to identify new policy opportunities by determining which policies generate more claims and how much the premium may be raised. Moreover, we reduce the number of claims via improving healthcare and changing policies. </p>
               <ul class="u-text u-text-default u-text-7">
                 <li>We use ML to anticipate future trends and determine patient risk ratings and find a link between patient care, financial performance, and policies to optimise whole operations. </li>
@@ -250,7 +250,7 @@
           <div class="u-container-style u-tab-pane" id="realestate" role="tabpanel" aria-labelledby="link-realestate">
             <div class="u-container-layout u-container-layout-3">
               <img class="industries_images" src="./images/realestate_industries_2.webp" alt="">
-              <h4 class="u-text u-text-default u-text-1">Description</h4>
+              <h4 class="u-text u-text-default u-text-1">Real Estate</h4>
               <div class="u-align-left u-border-3 u-border-grey-dark-1 u-line u-line-horizontal u-line-1"></div>
               <p class="u-text u-text-default u-text-2">We analyse property price indexes in order to provide you with the most advantageous bargains. Cluster analysis is also carried out through the generation of automated valuation models, the use of time series forecasting and other methods, and this allows us to present you with the greatest possible spectrum out of the available spectrum.</p>
               <!-- <h4 class="u-text u-text-default u-text-3">information</h4>
@@ -263,7 +263,7 @@
           <div class="u-container-style u-tab-pane" id="finance" role="tabpanel" aria-labelledby="link-finance">
             <div class="u-container-layout u-container-layout-4">
               <img class="industries_images" src="./images/financial_industries_2.jpg" alt="">
-              <h4 class="u-text u-text-default u-text-5">The Basics of Shipping</h4>
+              <h4 class="u-text u-text-default u-text-5">Finance</h4>
               <p class="u-text u-text-default u-text-6">Our ML empowered financial analytics solutions contribute strategically to business outcomes improvement through increased revenues, cost savings, avoided losses, and realised cash possibilities.
               </p>
               <ul class="u-text u-text-default u-text-7">
@@ -273,16 +273,14 @@
           <div class="u-container-style u-tab-pane" id="logistics" role="tabpanel" aria-labelledby="link-logistics">
             <div class="u-container-layout u-container-layout-5">
               <img class="industries_images" src="./images/logistics_industries_2.jpg" alt="">
-              <h4 class="u-text u-text-default u-text-1">Description</h4>
-              <div class="u-align-left u-border-3 u-border-grey-dark-1 u-line u-line-horizontal u-line-1"></div><p class="u-text u-text-default u-text-2">We provide services by reducing stop-over durations and reducing route delays using GPS, scanners, sensors and crew data. Use ML to forecast and analyse routes in real-time. Make proactive route planning, rerouting, and staffing decisions.</p>
-            <h4 class="u-text u-text-default u-text-3">information</h4>
-            <div class="u-border-3 u-border-grey-dark-1 u-expanded-width u-line u-line-horizontal u-line-2"></div>
-            <p class="u-text u-text-default u-text-4">Track critical indicators to enhance services, lower expenses, and increase profits. Analyze daily income per kilometre, vehicle expenditures, and breakdown losses to design the next transportation lot. Based on fare patterns, fuel prices, etc.</p></div>
+              <h4 class="u-text u-text-default u-text-1">Logistics</h4>
+              <div class="u-align-left u-border-3 u-border-grey-dark-1 u-line u-line-horizontal u-line-1"></div><p class="u-text u-text-default u-text-2">We provide services by reducing stop-over durations and reducing route delays using GPS, scanners, sensors and crew data. Use ML to forecast and analyse routes in real-time. Make proactive route planning, rerouting, and staffing decisions. Track critical indicators to enhance services, lower expenses, and increase profits. Analyze daily income per kilometre, vehicle expenditures, and breakdown losses to design the next transportation lot. Based on fare patterns, fuel prices, etc.</p>
+            <p class="u-text u-text-default u-text-4"></p></div>
           </div>
           <div class="u-container-style u-tab-pane" id="manufacturing" role="tabpanel" aria-labelledby="link-manufacturing">
             <div class="u-container-layout u-container-layout-6">
               <img class="industries_images" src="./images/manufacturing_industries_2.jpg" alt="">
-              <h4 class="u-text u-text-default u-text-5">The Basics of Shipping</h4>
+              <h4 class="u-text u-text-default u-text-5">Manufacturing</h4>
               <p class="u-text u-text-default u-text-6">Monitor production cycles in real time and use ML analytics to get knowledge about the production unit's efficiency, maintenance requirements, and product quality.
                 </p>
               <ul class="u-text u-text-default u-text-7">
@@ -307,7 +305,7 @@
           <div
             class="rounded-circle bg-white shadow-1-strong d-flex align-items-center justify-content-center mb-4 mx-auto"
             style="width: 150px; height: 150px;">
-            <img src="./images/logo.png" height="70" alt="" loading="lazy" />
+            <img class="footer_img" src="./images/logo.png" height="70px" alt="" loading="lazy" />
           </div>
 
           <p class="text-center">  </p>
