--- a/index.html
+++ b/index.html
@@ -797,7 +797,7 @@
           <div
             class="rounded-circle bg-white shadow-1-strong d-flex align-items-center justify-content-center mb-4 mx-auto"
             style="width: 150px; height: 150px;">
-            <img src="./images/logo.png" height="70" alt=""
+            <img class="footer_img" src="./images/logo.png" height="70px" alt=""
               loading="lazy" />
           </div>
 
