--- a/About.html
+++ b/About.html
@@ -246,9 +246,9 @@
           <h2 class="u-text u-text-body-alt-color u-text-default u-text-1">About Us</h2>
           <p class="u-text u-text-body-alt-color u-text-2">The tree of Kadamb (Neolamarckia Cadamba), has very long roots, thus showing our expertise and experience in the field. We here at Kadamb Intelligence, smartly analyze your data, thus providing you with best out of big chunks of data.
           </p>
-          <a href="./docs/brochure.pdf"
+          <!-- <a href="./docs/brochure.pdf"
             class="u-active-palette-1-base u-border-none u-btn u-btn-round u-button-style u-hover-palette-1-base u-radius-50 u-text-active-white u-text-hover-white u-text-palette-1-base u-white u-btn-1"> <i class="fa fa-solid fa-download"> &nbsp;</i>brochure 
-            </a>
+            </a> -->
         </div>
       </div>
       <div class="alignitright u-align-left u-container-style u-gradient u-group u-group-1">
@@ -330,7 +330,7 @@
           <div
             class="rounded-circle bg-white shadow-1-strong d-flex align-items-center justify-content-center mb-4 mx-auto"
             style="width: 150px; height: 150px;">
-            <img src="./images/logo.png" height="70" alt=""
+            <img class="footer_img" src="./images/logo.png" height="70" alt=""
               loading="lazy" />
           </div>
 
