--- a/About.html
+++ b/About.html
@@ -244,7 +244,7 @@
       <div class="u-align-left u-container-style u-gradient u-group u-group-1">
         <div class="u-container-layout u-container-layout-1">
           <h2 class="u-text u-text-body-alt-color u-text-default u-text-1">About Us</h2>
-          <p class="u-text u-text-body-alt-color u-text-2">The tree of Kadamb (Neolamarckia Cadamba), has very long roots, thus showing our expertise and experience in the field. We here at Kadamb Intelligence, smartly analyze your data, thus providing you with best out of big chunks of data.
+          <p class="u-text u-text-body-alt-color u-text-2">We, at Kadamb, are group of enthusiastic individuals who are trained in  both business and technical domain from some of the most prestigious institutions of the world. We have started this organisation with an aim to fuel one with the deep dossection of other.
           </p>
           <!-- <a href="./docs/brochure.pdf"
             class="u-active-palette-1-base u-border-none u-btn u-btn-round u-button-style u-hover-palette-1-base u-radius-50 u-text-active-white u-text-hover-white u-text-palette-1-base u-white u-btn-1"> <i class="fa fa-solid fa-download"> &nbsp;</i>brochure 
@@ -271,7 +271,7 @@
           <div class="content pt-4 pt-lg-0">
             <h3>Our vision</h3>
             <p class="fst-italic">
-              In order to make the most advanced analytics solutions understandable for users, we have set a goal for ourselves. In order to accomplish this, we integrate decision logics, sophisticated mathematics, and ML into the way you operate your organisation. Using mathematics, data technologies and our buisness oriented minds, we can reorganise your business and uncomplicate decision-making, thus delivering success.
+              We have a vision to make the most advanced analytics solutions deliverable for our clients with minimum strain to them while achieving so. We integrate decision logics, sophisticated mathematics, and ML into a simpler manner that you can use to operate your organisation. Using mathematics, data technologies and our buisness-oriented minds, we can reorganise your business needs and uncomplicate decision-making, thus ensuring success.
             </p>
             <!-- <ul>
               <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
