--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
               <img src="./images/dataScience_homepage_1.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption ">
                 <h5>Data Science</h5>
-                <p class="d-none d-md-block">Gain quick access to ML tools, forecasts for your business, and the ability to do your own what-if research.</p>
+                <p class="d-none d-md-block u-text-1">Gain quick access to ML tools, forecasts for your business, and the ability to do your own what-if research.</p>
               </div>
             </a>
           </div>
@@ -317,7 +317,7 @@
               <img src="./images/random_bg_3.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption">
                 <h5>Data Analysis</h5>
-                <p class="d-none d-md-block">With our corporate data analytics, you can unleash the potential of your data, develop breakthrough insights, streamline operations, and increase your return of investment.</p>
+                <p class="d-none d-md-block u-text-1">With our corporate data analytics, you can unleash the potential of your data, develop breakthrough insights, streamline operations, and increase your return of investment.</p>
               </div>
             </a>
           </div>
@@ -326,7 +326,7 @@
               <img src="./images/random_bg_2.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption">
                 <h5>Data Engineering</h5>
-                <p class="d-none d-md-block">Integrate your data warehouse systems seamlessly. Automate the transformation of data stored in data banks and push it to your data warehouse platform.</p>
+                <p class="d-none d-md-block u-text-1">Integrate your data warehouse systems seamlessly. Automate the transformation of data stored in data banks and push it to your data warehouse platform.</p>
               </div>
             </a>
           </div>
@@ -335,7 +335,7 @@
               <img src="./images/businessintelligence_homepage_1.png" class="d-block w-100" alt="...">
               <div class="carousel-caption">
                 <h5>Business Intelligence</h5>
-                <p class="d-none d-md-block">We will help you find the best proven strategies for your firm.To better understand your company needs, our specialists will work togather information, thus providing you with insights.</p>
+                <p class="d-none d-md-block u-text-1">We will help you find the best proven strategies for your firm.To better understand your company needs, our specialists will work togather information, thus providing you with insights.</p>
               </div>
             </a>
         </div>
