--- a/Industries.html
+++ b/Industries.html
@@ -282,10 +282,14 @@
               <img class="industries_images" src="./images/manufacturing_industries_2.jpg" alt="">
               <h4 class="u-text u-text-default u-text-5">Manufacturing</h4>
               <p class="u-text u-text-default u-text-6">Monitor production cycles in real time and use ML analytics to get knowledge about the production unit's efficiency, maintenance requirements, and product quality.
-                </p>
-              <ul class="u-text u-text-default u-text-7">
+              </p>
+              <p class="u-text u-text-default u-text-6">
+                Combine data from a variety of sources, including legacy systems, production units and develop accessible dashboards to gain complete insight.
+              </p>
+              <!-- <ul class="u-text u-text-default u-text-7">
                 <li>Combine data from a variety of sources, including legacy systems, production units and develop accessible dashboards to gain complete insight. </li>
-              </ul></div>
+              </ul> -->
+            </div>
           </div>
         </div>
       </div>
@@ -399,13 +403,13 @@
 
           <ul class="list-unstyled">
             <li>
-              <p><i class="fa fa-solid fa-location-arrow"> &nbsp;</i>257, Guru Nanak Pura, Adarsh nagar,  Jaipur, Rajasthan, India</p>
+              <p><i class="fa fa-solid fa-location-arrow"> &nbsp;</i>257, Guru Nanak Pura, Adarsh Nagar,  Jaipur, Rajasthan, India</p>
             </li>
             <li>
-              <p><i class="fa fa-phone pe-2"></i>+91 9314355550</p>
+              <p><i class="fa fa-phone pe-2"></i>+91-9314355550</p>
             </li>
             <li>
-              <p><i class="fa fa-envelope pe-2 mb-0"></i>contact@kadambintelligence.com</p>
+              <p style="font-size: medium;"><i class="fa fa-envelope pe-2 mb-0"></i>contact@kadambintelligence.com</p>
             </li>
           </ul>
         </div>
