--- a/Services.html
+++ b/Services.html
@@ -240,7 +240,7 @@
       <div class="row">
         <div class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center" data-aos="fade-up">
           <div>
-            <h1>We analyze your data to help you grow your businesse</h1>
+            <h1>We analyze your data to help you grow your business.</h1>
             <a href="#data_science" class="btn-get-started scrollto">
             <button class="u-btn u-border-none u-btn-round u-button-style u-color-scheme-summer-time u-color-style-multicolor-1 u-palette-1-base u-radius-50 u-btn-1">Get Started</button>
             </a>
@@ -454,13 +454,13 @@
 
           <ul class="list-unstyled">
             <li>
-              <p><i class="fa fa-solid fa-location-arrow"> &nbsp;</i>257, Guru Nanak Pura, Adarsh nagar,  Jaipur, Rajasthan, India</p>
+              <p><i class="fa fa-solid fa-location-arrow"> &nbsp;</i>257, Guru Nanak Pura, Adarsh Nagar,  Jaipur, Rajasthan, India</p>
             </li>
             <li>
-              <p><i class="fa fa-phone pe-2"></i>+91 9314355550</p>
+              <p><i class="fa fa-phone pe-2"></i>+91-9314355550</p>
             </li>
             <li>
-              <p><i class="fa fa-envelope pe-2 mb-0"></i>contact@kadambintelligence.com</p>
+              <p style="font-size: medium;"><i class="fa fa-envelope pe-2 mb-0"></i>contact@kadambintelligence.com</p>
             </li>
           </ul>
         </div>
