--- a/index.html
+++ b/index.html
@@ -263,12 +263,11 @@
               <div class="u-layout-row">
                 <div class="u-align-left u-container-style u-layout-cell u-right-cell u-size-60 u-layout-cell-3">
                   <div class="u-container-layout u-container-layout-3">
-                    <p class="u-text u-text-palette-5-light-3 u-text-3">Organizations run on backlashes of uncertainty. Right collection of a data set and making sense out of it can reduce this horror. We believe taking a scientific approach, interpreting the right hows and whys and a concrete analysis is the root system of running a successful organization. We provide that centralized space which you can reach out to for all your business problems.
+                    <p class="u-text u-text-palette-5-light-3 u-text-1">Organizations run on backlashes of uncertainty. Right collection of a data set and making sense out of it can reduce this horror. We believe taking a scientific approach, interpreting the right hows and whys and a concrete analysis is the root system of running a successful organization. We provide that centralized space which you can reach out to for all your business problems.
                       <!-- <br><br><b>We combine local knowledge with global expertise, strategy with design, empathy with creativity, meaning with magic. Reach out to discuss how we might help you accelerate change.</b> -->
                     </p>
                     <a href="index.html#carousel_64ac" data-page-id="2206810918"
-                      class="u-border-none u-btn u-btn-round u-button-style u-color-scheme-summer-time u-color-style-multicolor-1 u-palette-1-base u-radius-50 u-btn-1">Learn
-                      more</a>
+                      class="u-border-none u-btn u-btn-round u-button-style u-color-scheme-summer-time u-color-style-multicolor-1 u-palette-1-base u-radius-50 u-btn-1">Learn more</a>
                   </div>
                 </div>
               </div>
@@ -664,9 +663,9 @@
                   d="M139.44,68.711c6.97,0.803,16.616,5.973,22.935,12.292c6.373,6.374,11.553,16.112,12.316,23.157   c0.417,3.844,3.667,6.692,7.447,6.692c0.27,0,0.543-0.015,0.817-0.044c4.118-0.447,7.095-4.147,6.648-8.265   c-1.304-12.028-9.289-24.813-16.623-32.147c-7.268-7.269-19.928-15.216-31.825-16.587c-4.119-0.479-7.835,2.478-8.309,6.592   C132.373,64.516,135.325,68.237,139.44,68.711z">
                 </path>
               </g>
-            </svg><img></span>&nbsp;+91 9314355550
+            </svg><img></span>&nbsp;+91-9314355550
           </span>
-        <a href="mailto:contact@kadambintelligence.com"
+        <a style="font-size: medium;" style="font-size: medium;" href="mailto:contact@kadambintelligence.com"
           class="u-active-none u-btn u-button-style u-hover-none u-none u-text-hover-palette-2-base u-btn-2"><span
             class="u-icon u-text-palette-2-base"><svg class="u-svg-content" viewBox="0 0 479.058 479.058"
               style="width: 1em; height: 1em;">
@@ -890,13 +889,13 @@
 
           <ul class="list-unstyled">
             <li>
-              <p><i class="fa fa-solid fa-location-arrow"> &nbsp;</i>257, Guru Nanak Pura, Adarsh nagar,  Jaipur, Rajasthan, India</p>
+              <p><i class="fa fa-solid fa-location-arrow"> &nbsp;</i>257, Guru Nanak Pura, Adarsh Nagar,  Jaipur, Rajasthan, India</p>
             </li>
             <li>
-              <p><i class="fa fa-phone pe-2"></i>+91 9314355550</p>
+              <p><i class="fa fa-phone pe-2"></i>+91-9314355550</p>
             </li>
             <li>
-              <p><i class="fa fa-envelope pe-2 mb-0"></i>contact@kadambintelligence.com</p>
+              <p style="font-size: medium;"><i class="fa fa-envelope pe-2 mb-0"></i>contact@kadambintelligence.com</p>
             </li>
           </ul>
         </div>
