--- a/About.html
+++ b/About.html
@@ -244,7 +244,7 @@
       <div class="u-align-left u-container-style u-gradient u-group u-group-1">
         <div class="u-container-layout u-container-layout-1">
           <h2 class="u-text u-text-body-alt-color u-text-default u-text-1">About Us</h2>
-          <p class="u-text u-text-body-alt-color u-text-2">We, at Kadamb, are group of enthusiastic individuals who are trained in  both business and technical domain from some of the most prestigious institutions of the world. We have started this organisation with an aim to fuel one with the deep dossection of other.
+          <p class="u-text u-text-body-alt-color u-text-2">We, at Kadamb, are group of enthusiastic individuals who are trained in  both business and technical domain from some of the most prestigious institutions of the world. We have started this organisation with an aim to fuel one with the deep dissection of other.
           </p>
           <!-- <a href="./docs/brochure.pdf"
             class="u-active-palette-1-base u-border-none u-btn u-btn-round u-button-style u-hover-palette-1-base u-radius-50 u-text-active-white u-text-hover-white u-text-palette-1-base u-white u-btn-1"> <i class="fa fa-solid fa-download"> &nbsp;</i>brochure 
@@ -299,13 +299,12 @@
           <div class="content pt-4 pt-lg-0">
             <h3>Why us</h3>
             <p class="fst-italic">
-              We here at Kadamb, are a bunch of experienced and intelligent people, which with their hardwork and dedication, bring success and satisfaction to your company. We will provide you with best costs around the globe and best services across the spectrum.
+              At Kadamb, we believe indulging creativity is necessary at each step of data processing. Of course, a data scientist who can create an attractive and easy-to-grasp report or visual out of results are a great pick but we want to differentiate ourself by taking this to next level. We emphasize on fueling skillful communication, get around the way to make the impossible possible and  beautifully craft algorithims through creativity at the best cost guaranteed compared to anywhere else.
             </p>
-            <ul>
+            <!-- <ul>
               <li><i class="bi bi-check-circle"></i> We combine business intelligence and technology, thus delivering you the charm of success.</li>
               <li><i class="bi bi-check-circle"></i> We at Kadamb as a family, will never let you down.</li>
-              <!-- <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperd</li> -->
-            </ul>
+            </ul> -->
             <!-- <p>
               Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate tera noden carma palorp mades tera.
             </p> -->
@@ -426,13 +425,13 @@
 
           <ul class="list-unstyled">
             <li>
-              <p><i class="fa fa-solid fa-location-arrow"> &nbsp;</i>257, Guru Nanak Pura, Adarsh nagar,  Jaipur, Rajasthan, India</p>
+              <p><i class="fa fa-solid fa-location-arrow"> &nbsp;</i>257, Guru Nanak Pura, Adarsh Nagar,  Jaipur, Rajasthan, India</p>
             </li>
             <li>
-              <p><i class="fa fa-phone pe-2"></i>+91 9314355550</p>
+              <p><i class="fa fa-phone pe-2"></i>+91-9314355550</p>
             </li>
             <li>
-              <p><i class="fa fa-envelope pe-2 mb-0"></i>contact@kadambintelligence.com</p>
+              <p style="font-size: medium;"><i class="fa fa-envelope pe-2 mb-0"></i>contact@kadambintelligence.com</p>
             </li>
           </ul>
         </div>
