font smaller in contact form

--- a/index.html
+++ b/index.html
@@ -648,7 +648,7 @@
     <div class="u-container-style u-group u-radius-10 u-shape-round u-white u-group-1">
       <div class="u-container-layout u-container-layout-1">
         <h3 class="u-text u-text-1">Contact Info</h3>
-        <span
+        <span style="font-size: medium;"
           class="u-active-none u-btn u-button-style u-hover-none u-none u-text-hover-palette-2-base u-btn-1"><span
             class="u-icon u-text-palette-2-base"><svg class="u-svg-content" viewBox="0 0 241.73 241.73" x="0px" y="0px"
               style="width: 1em; height: 1em;">
@@ -674,7 +674,7 @@
               </path>
             </svg><img></span>&nbsp;contact@kadambintelligence.com
         </a>
-        <p class="u-text u-text-2"><span class="u-icon u-text-palette-2-base"><svg class="u-svg-content"
+        <p style="font-size: medium;" class="u-text u-text-2"><span class="u-icon u-text-palette-2-base"><svg class="u-svg-content"
               viewBox="0 0 512 512" x="0px" y="0px" style="width: 1em; height: 1em;">
               <g>
                 <g>
