font smaller in footer

--- a/index.html
+++ b/index.html
@@ -889,7 +889,7 @@
 
           <ul class="list-unstyled">
             <li>
-              <p><i class="fa fa-solid fa-location-arrow"> &nbsp;</i>257, Guru Nanak Pura, Adarsh Nagar,  Jaipur, Rajasthan, India</p>
+              <p style="font-size: medium;"><i class="fa fa-solid fa-location-arrow"> &nbsp;</i>257, Guru Nanak Pura, Adarsh Nagar,  Jaipur, Rajasthan, India</p>
             </li>
             <li>
               <p><i class="fa fa-phone pe-2"></i>+91-9314355550</p>
