--- a/About.html
+++ b/About.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="./CSS-libraries/nicepage.css" media="screen">
   <link rel="stylesheet" href="./Styles/About.css" media="screen">
   <link rel="stylesheet" href="./Styles/Global.css">
+  <link rel="icon" type="image/x-icon" href="/images/logo.png">
   <script class="u-script" type="text/javascript" src="./JS-libraries/jquery.min.js" defer=""></script>
   <script class="u-script" type="text/javascript" src="./JS-libraries/nicepage.min.js" defer=""></script>
   <link id="u-theme-google-font" rel="stylesheet"
