--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="./CSS-libraries/nicepage.css" media="screen">
   <link rel="stylesheet" href="./Styles/Index.css" media="screen">
   <link rel="stylesheet" href="./Styles/Global.css">
+  <link rel="icon" type="image/x-icon" href="/images/logo.png">
   <!-- CSS only -->
   <link href="./CSS-libraries/bootstrap.5.1.3.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
